# krkrs

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  TODO
krkrs/: .gitignore  index.html  package-lock.json  package.json
krkrs/src/: App.tsx  index.css  main.tsx
krkrs/src/view/: PlayView.tsx  playView.css  rootView.css  rootView.tsx
krkrs/src/view/component/: ImageDisplay.tsx  TextDisplay.css  TextDisplay.tsx  TextParagraph.tsx  image-displayer.css
src/: lib.rs
src/intepreter/: mod.rs  parser.rs
src/interface/: cli.rs  mod.rs  wasm.rs
src/interpreter/: interpreter.rs  mod.rs  parser.rs
src/parsec/: char.rs  combinator.rs  mod.rs
src/presentation/: cli.rs  mod.rs  wasm.rs
src/vfs/: mod.rs
tools/decoder/: README.md  ksdecoder.ml
tools/pypc/: README.md  pypc.py
tools/renamer/: .gitignore  README.md  renamer.py  requirements.txt  translator.py
