[package]
name = "krkrs"
version = "0.1.0"
authors = ["hortensia <824466875@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "krkrs-cli"
path = "src/bin/cli.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
